--- a/src/assets/css/homePage/header_layout.css
+++ b/src/assets/css/homePage/header_layout.css
@@ -34,34 +34,42 @@ header {
   top: 50px;
   right: 0;
 }
+.header__menu-showWithPending {
+  position: fixed;
+  width: 100%;
+  top: 70px;
+  right: 0;
+}
 /* Header Out */
 .header__out {
   grid-row: 3/4;
 }
 
 .request {
+  background-color: rgb(190, 206, 193);
   display: flex;
   flex-direction: row;
-  width: 70px;
-  height: 50px;
+  width: 100%;
+  height: 30px;
   position: fixed;
-  top: 530px;
-  right: 10px;
+  top: 45px;
+  left:0;
   bottom: 0;
   margin: 0;
-  padding: 0;
+  padding:    0;
 }
 .request-hide {
   display: none;
 }
 /* MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate */
-
 .request .MuiCircularProgress-root {
-  color: yellow;
+  margin-top: 5px;
 }
 .request p {
-  color: rgb(82, 82, 3);
-  font-size: 22px;
-  font-weight: 700;
-  margin-left: 8px;
+  color: rgb(63, 63, 61);
+  font-size: 14px;
+  font-weight: 400;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top:3px;
 }
